# advanced-linux

./: README.md
Lab01/: Lab_solution.md  bldd_tool.py  hello.c  pyproject.toml
Lab01/bldd/: __main__.py  cli.py  elf_utils.py  reporter.py  scanner.py
Lab01/reports/: bldd_report.txt
Lab01/test_bins/aarch64/: hello_aarch64
Lab01/test_bins/armv7/: hello_armv7
Lab01/test_bins/x86/: hello_x86
Lab01/test_bins/x86_64/: hello_x86_64
Lab02/: Lab_Solution.md
Lab02/apps/: hack_app  patched_hack_app
Lab02/scripts/: keygen.py  patch.py
Lab03/: Lab_solution.md
Lab04/: Lab_solution.md  Makefile  int_stack.c  kernel_stack.c  stack_ioctl.h
Lab04/make_compilation/: .Module.symvers.cmd  .int_stack.ko.cmd  .int_stack.mod.cmd  .int_stack.mod.o.cmd  .int_stack.o.cmd  .modules.order.cmd  int_stack.ko  int_stack.mod.c  kernel_stack  modules.order
Lab05/: Lab-solution.md  Makefile  int_stack.c  kernel_stack.c  usb_gate.c
Lab05/make_compilation/: .Module.symvers.cmd  .int_stack.ko.cmd  .int_stack.mod.cmd  .int_stack.mod.o.cmd  .int_stack.o.cmd  .int_stack.o.d  .modules.order.cmd  .usb_gate.ko.cmd  .usb_gate.mod.cmd  .usb_gate.mod.o.cmd  .usb_gate.o.cmd  Module.symvers  int_stack.ko  int_stack.mod  int_stack.mod.c  kernel_stack  modules.order  usb_gate.ko  usb_gate.mod  usb_gate.mod.c
