[project]
name = "backward-ldd"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohammed-Nour",email = "o.shaheen1882@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "elf (>=0.1.0,<0.2.0)",
    "pyelftools (>=0.32,<0.33)",
    "lief (>=0.16.4,<0.17.0)",
    "fpdf (>=1.7.2,<2.0.0)",
    "weasyprint (>=65.0,<66.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
